Test_files/invalidTestCases/fail_sub.avm
push int8(3)
add
exit